Modificación del onvre

--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -64,7 +64,7 @@
     <h2>Xanyer / Alphagamer / “El Onvre”</h2>
     <ul class="roast-list">
       <li>👨‍🦲 Onvre certificado: piensa en modo <em>unga unga</em>.</li>
-      <li>🎮 Juega al LoL… pero solo si no le toca ADC o jungla.</li>
+      <li>🎮 Juega al LoL… pero solo si no le toca ADC (sálvenlo de jugar con Yuumis).</li>
       <li>😂 Fan de los chistes malos. Nivel: hace que los chistes de padre parezcan stand-up de Netflix.</li>
       <li>🎲 Fan de los gachas… excepto del <strong>Zenless Zone Zero</strong>. Ese lo juega porque le obligaron, y cada login es un trauma.</li>
       <li>🐺 Fan declarado de <strong>Arlecchino</strong>… aunque eso lo convierta oficialmente en furro (cof cof). Y lo sabe.</li>
@@ -73,6 +73,7 @@
     <p class="summary">
       En resumen: un “onvre” autoproclamado (en verdad no, le llamamos nosotros así porque se lo merece, maldito onvre), esclavo del gacha, amante de Arlecchino aunque sea furra, y el único capaz de convertir cada partida en el lol y login en el ZZZ en un drama existencial.
     </p>
+    <img src="assets/toasptas.png" alt="Se merece que le llamen onvre">
   </div>
   <img src="assets/xanyer.png" alt="Xanyer / Alphagamer">
 </section>
