--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -73,7 +73,7 @@
     <p class="summary">
       En resumen: un “onvre” autoproclamado (en verdad no, le llamamos nosotros así porque se lo merece, maldito onvre), esclavo del gacha, amante de Arlecchino aunque sea furra, y el único capaz de convertir cada partida en el lol y login en el ZZZ en un drama existencial.
     </p>
-    <img src="assets/toasptas.png" alt="Se merece que le llamen onvre">
+    <img src="assets/toasptas.png" alt="Se merece que le llamen onvre" class="extra-img">
   </div>
   <img src="assets/xanyer.png" alt="Xanyer / Alphagamer">
 </section>
