--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -112,3 +112,22 @@
     </p>
   </div>
 </section>
+<section class="about-extra">
+  <h2>Y aún somos más...</h2>
+  <p class="intro-text">
+    Somos muchos más, pero si nos presentamos todos no acabaríamos nunca 🍌
+  </p>
+
+  <div class="scroll-box">
+    <div class="scroll-line left-to-right">
+      <span>txema • itsyugen • friendlykiller • a13xito4569</span>
+    </div>
+    <div class="scroll-line right-to-left">
+      <span>varo • simba • tinti • fabulean</span>
+    </div>
+    <div class="scroll-line left-to-right">
+      <span>yato • jose • alberto</span>
+    </div>
+  </div>
+</section>
+
